--- a/Note/函数进阶.md
+++ b/Note/函数进阶.md
@@ -38,3 +38,47 @@ int main()
 
 - 在C语言中因为系统是通过名字来区分各个函数的，所以不能有两个函数具有相同的名字。
 - 在C++中**可以定义多个同名函数**，只要他们的**形参个数或类型不完全一样**就可以，编译程序根据**实参与形参的类型及个数自动确定调用**哪个同名函数，这就是**函数重载**
+
+```c++
+int max(int x,int y);
+double max(double x, double y);
+int main()
+{
+    int a = 2;
+    int b = 3;
+    double c = 6.0;
+    double e = 4.0;
+    int x = max(a,b);
+    double y = max(c,e);
+    cout << a << "和" << b << "的最大值是" << x << endl;
+    cout << c << "和" << e << "的最大值是" << y << endl;
+
+    return 0;
+}
+int max(int x, int y)
+{
+    if (x >= y)
+        return x;
+    else
+        return y;
+}
+double max(double x,double y)
+{
+    if (x >= y)
+        return x;
+    else
+        return y;
+}
+
+```
+
+注意，在函数重载中，要避免二义性。
+
+```c++
+// 在上面的程序中不能出现以下有歧义的代码
+int x = 1;
+double y = 3.5;
+max(x,y);  // 此代码就有二义性，要避免这种情况
+```
+
+![image-20230810091604896](https://s2.loli.net/2023/08/10/iBxAsyCcbt2T5Rp.png)
