--- a/Note/结构类型.md
+++ b/Note/结构类型.md
@@ -36,3 +36,81 @@ struct student
 }s1,s2;
 ```
 
+结构数组与结构指针
+
+```c++
+// 结构数组
+
+// 结构类型 数组名[常量表达式]
+// 结构类型 数组名[常量表达式] = {初值表}
+```
+
+
+
+
+
+
+
+```c++
+// 结构指针
+
+// 结构类型名 *结构指针变量名
+```
+
+## 联合
+
+结构体变脸的大小为结构中所有成员大小之和，又是需要使**几个不同的变量占用同一段内存空间**，这是可以声明一个联合来实现，联合和也称为共用体。
+
+```c++
+union 联合名
+{
+    数据类型1 成员1;
+    数据类型2 成员2;
+    
+   ......
+    数据类型n 成员n;
+}
+```
+
+联合变量的定义
+
+```c++
+联合名  联合变量名;
+```
+
+- 联合变量不能整体引用，只能引用联合和中的各个成员，应用的格式为
+
+```c++
+联合变量名.成员名
+```
+
+```c++
+union da{
+    int i;
+    char ch;
+    float f;
+};
+int main()
+{
+    da d;
+    d.i = 97;                       // 给一个成员赋值，影响所有成员
+    cout << d.i << "," << d.ch << "," << d.f << endl;
+    d.ch = 'A';
+    cout << d.i << "," << d.ch << "," << d.f << endl;
+    d.f = 100;
+    cout << d.i << "," << d.ch << "," << d.f << endl;
+    cout << sizeof(da) <<endl;    // 联合类型占用的字节数
+    cout << sizeof(d) << endl;
+    return 0;
+}
+
+//97,a,1.35926e-43
+//65,A,9.10844e-44
+//1120403456, ,100
+//4
+//4
+
+```
+
+- **给联合体中的一个成员变量赋值时，会影响其他变量**
+- **通过上面程序的结果可得，联合类型所占用的内存字节数与最大成员所占内存字节数相同**
