--- a/Note/结构类型.md
+++ b/Note/结构类型.md
@@ -114,3 +114,45 @@ int main()
 
 - **给联合体中的一个成员变量赋值时，会影响其他变量**
 - **通过上面程序的结果可得，联合类型所占用的内存字节数与最大成员所占内存字节数相同**
+
+```c++
+// 求一个整数高位数和低位数
+union word{
+    unsigned char ch[2];  // 共两个字节
+    unsigned short num;     // 2个字节
+};
+int main()
+{
+    word w;
+    w.num = 2856;
+    cout << w.num <<"低位数为："  << (int) w.ch[0] << "高位数为：" << (int)w.ch[1] << endl;
+    w.ch[0] = 93;
+    cout << w.num <<"低位数为："  << (int) w.ch[0] << "高位数为：" << (int) w.ch[1] << endl;
+    return 0;
+}
+```
+
+## 枚举
+
+枚举是**用标识符表示的整型常量的集合**，用关键字**enum**定义，枚举类型的定义的语法如下：
+
+```c++
+enum weekdays {Sun,Mon,Tue,Wed,Thu,Fri,Sat};
+```
+
+- 枚举定义的中的各枚元素不能同名
+
+- 如果不指定枚举元素的起始值，将自动从0开始为各个枚举元素设置初始值，后面的枚举元素依次增1
+- 如果指定某个枚举元素的值，则下一个枚举元素如果没有指定值，就是上一个枚举元素值加1。
+
+枚举变量的定义语法为
+
+```c++
+枚举类型名  枚举变量名;
+```
+
+**枚举类型可以转换成int型，但是int型不能自动转换为为枚举类型**
+
+## 名称空间(namespace)
+
+当有相同定义但
